k8s/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: mysql
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      run: mysql
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: mysql
    spec:
      containers:
        - env:
          - name: MYSQL_DATABASE
            valueFrom:
              configMapKeyRef:
                name: my-config
                key: mysql_database
          - name: MYSQL_PASSWORD
            valueFrom:
              configMapKeyRef:
                name: my-config
                key: mysql_password
          - name: MYSQL_ROOT_PASSWORD
            valueFrom:
              configMapKeyRef:
                name: my-config
                key: mysql_root_password
          - name: MYSQL_USER
            valueFrom:
              configMapKeyRef:
                name: my-config
                key: mysql_user
          #image: 127.0.0.1:5000/fyomaruhauto1212/weather_app_mysql
          image: fyomaruhauto1212/weather_app_mysql
          name: mysql
          ports:
            - containerPort: 3306
          resources: {}
          volumeMounts:
            # Volume名を指定
          - name: my-pv
            # Volumeをマウントするコンテナ内のファイルパスを指定
            mountPath: /var/lib/mysql
      volumes:
        # 作成するVolume名を指定
        - name: my-pv
          # 永続ボリューム要求名を指定
          persistentVolumeClaim:
            claimName: pvc
      restartPolicy: Always
status: {}
