k8s/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: flask
  name: flask
spec:
  ports:
   - port: 5000
     protocol: TCP
     targetPort: 5000
  selector:
    run: flask
  type: NodePort
status:
  loadBalancer: {}
