k8s/host-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: host
  name: host
spec:
  ports:
   - port: 18765
     protocol: TCP
     targetPort: 80
  selector:
    run: host
  type: NodePort
status:
  loadBalancer: {}
