k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: mysql
  name: mysql
spec:
  ports:
   - port: 13307
     protocol: TCP
     targetPort: 3306
  selector:
    run: mysql
  type: NodePort
status:
  loadBalancer: {}
