k8s/phpmyadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: phpmyadmin
  name: phpmyadmin
spec:
  ports:
   - port: 18080
     protocol: TCP
     targetPort: 80
  selector:
    run: phpmyadmin
  type: NodePort
status:
  loadBalancer: {}
