k8s/ingress_host.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: host
  annotations:
    apache.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /vote
        backend:
          serviceName: host
          servicePort: 5000
      - path: /result
        backend:
          serviceName: phpmyadmin
          servicePort: 18080
